@@ -1,6 +1,17 @@
 DESTDIR = ../build/common
 TEMPLATE = subdirs
-SUBDIRS += buildsmf \
+include (../global.pri)
+VERSIONH = $$sprintf(const QString PGM_VERSION(\"%1\");,$$VERSION)
+system($$QMAKE_MKDIR $$DESTDIR)
+win32 { 
+    system(echo $$VERSIONH > ../build/common/cmdversion.h)
+    SUBDIRS += buildsmf \
+           dumpsmf \
+           dumpwrk
+}
+linux* { 
+    system(echo \'$$VERSIONH\' > ../build/common/cmdversion.h)
+    SUBDIRS += buildsmf \
            dumpmid \
            dumpsmf \
            playsmf \
@@ -12,12 +23,4 @@ SUBDIRS += buildsmf \
            metronome \
            dumpwrk \
            drumgrid
-VERSION=0.3.2svn
-VERSIONH = $$sprintf(const QString PGM_VERSION(\"%1\");,$$VERSION)
-system($$QMAKE_MKDIR $$DESTDIR)
-win32 { 
-    system(echo $$VERSIONH > ../build/common/cmdversion.h)
-}
-linux* { 
-    system(echo \'$$VERSIONH\' > ../build/common/cmdversion.h)
 }
